--- a/app/src/main/res/layout/calender_month_item.xml
+++ b/app/src/main/res/layout/calender_month_item.xml
@@ -1,105 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/calender_month"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:textSize="16sp"
-        android:textColor="@color/design_default_color_primary"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/calender_month"
-        app:layout_constraintTop_toBottomOf="@id/calender_month">
-
+    <data>
+        <variable
+            name="month"
+            type="Integer"
+            />
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/day_mon"
-            android:layout_width="0dp"
+            android:id="@+id/calender_month"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Mon" />
+            android:layout_margin="10dp"
+            android:textSize="16sp"
+            android:textColor="@color/design_default_color_primary"
+            android:text="@{month.toString()}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/day_tue"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Tue"
-            app:layout_constraintStart_toEndOf="@id/day_mon"
-            app:layout_constraintTop_toBottomOf="@id/calender_month" />
+            app:layout_constraintStart_toStartOf="@id/calender_month"
+            app:layout_constraintTop_toBottomOf="@id/calender_month">
 
-        <TextView
-            android:id="@+id/day_wen"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Wen"
-            app:layout_constraintStart_toEndOf="@id/day_tue"
-            app:layout_constraintTop_toBottomOf="@id/calender_month" />
+            <TextView
+                android:id="@+id/day_mon"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Mon" />
 
-        <TextView
-            android:id="@+id/day_thu"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Thu"
-            app:layout_constraintStart_toEndOf="@id/day_wen"
-            app:layout_constraintTop_toBottomOf="@id/calender_month" />
+            <TextView
+                android:id="@+id/day_tue"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Tue"
+                app:layout_constraintStart_toEndOf="@id/day_mon"
+                app:layout_constraintTop_toBottomOf="@id/calender_month" />
 
-        <TextView
-            android:id="@+id/day_fri"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Fri"
-            app:layout_constraintStart_toEndOf="@id/day_thu"
-            app:layout_constraintTop_toBottomOf="@id/calender_month" />
+            <TextView
+                android:id="@+id/day_wen"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Wen"
+                app:layout_constraintStart_toEndOf="@id/day_tue"
+                app:layout_constraintTop_toBottomOf="@id/calender_month" />
 
-        <TextView
-            android:id="@+id/day_sat"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Sat"
-            app:layout_constraintStart_toEndOf="@id/day_fri"
-            app:layout_constraintTop_toBottomOf="@id/calender_month" />
+            <TextView
+                android:id="@+id/day_thu"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Thu"
+                app:layout_constraintStart_toEndOf="@id/day_wen"
+                app:layout_constraintTop_toBottomOf="@id/calender_month" />
 
-        <TextView
-            android:id="@+id/day_sun"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Sun"
-            app:layout_constraintStart_toEndOf="@id/day_sat"
-            app:layout_constraintTop_toBottomOf="@id/calender_month" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/day_fri"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Fri"
+                app:layout_constraintStart_toEndOf="@id/day_thu"
+                app:layout_constraintTop_toBottomOf="@id/calender_month" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/calender_day_view"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:spanCount="7" />
+            <TextView
+                android:id="@+id/day_sat"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Sat"
+                app:layout_constraintStart_toEndOf="@id/day_fri"
+                app:layout_constraintTop_toBottomOf="@id/calender_month" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/day_sun"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Sun"
+                app:layout_constraintStart_toEndOf="@id/day_sat"
+                app:layout_constraintTop_toBottomOf="@id/calender_month" />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
