--- a/app/src/main/res/layout/calender_month_item.xml
+++ b/app/src/main/res/layout/calender_month_item.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="month"
-            type="Integer"
+            type="String"
             />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,9 +18,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:textSize="16sp"
+            android:textSize="20sp"
             android:textColor="@color/design_default_color_primary"
-            android:text="@{month.toString()}"
+            android:text="@{month}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
