--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,7 +14,7 @@
     <fragment
         android:id="@+id/navigation_stats"
         android:name="com.example.miniproject.ui.stats.StatsFragment"
-        android:label="@string/title_dashboard"
+        android:label="@string/title_stats"
         tools:layout="@layout/fragment_stats" />
 
     <fragment
